@@ -35,8 +35,8 @@ glyph_08:
     db 0xc6, 0xfe, 0xfe, 0x54, 0xaa, 0xaa, 0x00, 0x00
 
 glyph_09:
-    db 0x00, 0x54, 0x81, 0x3c, 0xad, 0x3c, 0xbd, 0x00
-    db 0x55, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+    db 0x54, 0x54, 0x81, 0x3c, 0xad, 0x3c, 0xbd, 0x00
+    db 0x55, 0x54, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
 
 glyph_0a:
     db 0x00, 0x0c, 0x14, 0x16, 0x1e, 0x1e, 0x0c, 0x0c
@@ -55,16 +55,16 @@ glyph_0d:
     db 0x00, 0xfe, 0xf2, 0xfe, 0x00, 0x00, 0x00, 0x00
 
 glyph_0e:
-    db 0x00, 0xe0, 0x10, 0x10, 0x7c, 0x92, 0x92, 0x92
-    db 0xfe, 0xfe, 0xfe, 0xfe, 0x7c, 0x00, 0x00, 0x00
+    db 0x00, 0x00, 0xbd, 0xbd, 0xbd, 0x81, 0xff, 0xc3
+    db 0xd3, 0xd3, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
 
 glyph_0f:
     db 0x00, 0xfe, 0xaa, 0xfe, 0x82, 0x92, 0xb2, 0x92
     db 0x92, 0xba, 0x84, 0xf8, 0x00, 0x00, 0x00, 0x00
 
 glyph_10:
-    db 0x00, 0x00, 0x38, 0x44, 0xc6, 0x44, 0xc6, 0x44
-    db 0xc6, 0x44, 0x38, 0x00, 0x00, 0x00, 0x00, 0x00
+    db 0x00, 0x00, 0x3c, 0x42, 0xdb, 0x5a, 0xdb, 0x5a
+    db 0xdb, 0x42, 0x3c, 0x00, 0x00, 0x00, 0x00, 0x00
 
 glyph_11:
     db 0x00, 0x38, 0x7c, 0x82, 0x92, 0xba, 0x92, 0x82
